--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@ input {
   text-align: center;
   font-size: 16px;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.3s;~
   border-radius: 0;
 }
 
